// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpottersSafetyObserver should display the SpottersSafetyObserver section with empty state values 1`] = `
<DocumentFragment>
  <div
    class="mb-4"
  >
    <div
      class="mb-4 text-neutral-shade-100"
    >
      <h5
        class="font-semibold"
      >
        Spotters/Safety Observer
      </h5>
    </div>
    <div
      class="flex flex-col mb-4 gap-4 bg-brand-gray-10 p-4"
    >
      <div>
        <label
          class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        >
          Has a Safety Observer been assigned?
        </label>
        <div
          class="flex flex-wrap flex-row gap-6"
          id="headlessui-radiogroup-11"
          role="radiogroup"
        >
          <div
            aria-checked="false"
            aria-labelledby="headlessui-label-13"
            class="flex items-center"
            id="headlessui-radiogroup-option-12"
            role="radio"
            tabindex="0"
          >
            <div
              class="flex items-center justify-center border rounded-xl w-5 h-5 border-neutral-shade-38 cursor-pointer hover:border-neutral-shade-58 hover:shadow-10"
            />
            <label
              class="text-neutral-shade-100 text-base ml-2"
              id="headlessui-label-13"
            >
              No
            </label>
          </div>
          <div
            aria-checked="false"
            aria-labelledby="headlessui-label-15"
            class="flex items-center"
            id="headlessui-radiogroup-option-14"
            role="radio"
            tabindex="-1"
          >
            <div
              class="flex items-center justify-center border rounded-xl w-5 h-5 border-neutral-shade-38 cursor-pointer hover:border-neutral-shade-58 hover:shadow-10"
            />
            <label
              class="text-neutral-shade-100 text-base ml-2"
              id="headlessui-label-15"
            >
              Yes
            </label>
          </div>
        </div>
      </div>
      <div>
        <label
          class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        >
          Notes
        </label>
        <textarea
          aria-label="FieldTextArea"
          class="w-full max-h-36 text-base text-neutral-shade-100 outline-none focus:border-brand-gray-60 disabled:cursor-not-allowed min-h-12 border border-neutral-shade-37 rounded resize-y py-1 px-2"
          name="safetyAndCompliance.spottersSafetyObserver.safetyObserverAssignedNotes"
        />
      </div>
    </div>
    <div
      class="flex flex-col mb-4 gap-4"
    >
      <div>
        <label
          class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        >
          Spotter Identified when machinery and/or equipment is backing up?
        </label>
        <div
          class="flex flex-wrap flex-row gap-6"
          id="headlessui-radiogroup-16"
          role="radiogroup"
        >
          <div
            aria-checked="false"
            aria-labelledby="headlessui-label-18"
            class="flex items-center"
            id="headlessui-radiogroup-option-17"
            role="radio"
            tabindex="0"
          >
            <div
              class="flex items-center justify-center border rounded-xl w-5 h-5 border-neutral-shade-38 cursor-pointer hover:border-neutral-shade-58 hover:shadow-10"
            />
            <label
              class="text-neutral-shade-100 text-base ml-2"
              id="headlessui-label-18"
            >
              No
            </label>
          </div>
          <div
            aria-checked="false"
            aria-labelledby="headlessui-label-20"
            class="flex items-center"
            id="headlessui-radiogroup-option-19"
            role="radio"
            tabindex="-1"
          >
            <div
              class="flex items-center justify-center border rounded-xl w-5 h-5 border-neutral-shade-38 cursor-pointer hover:border-neutral-shade-58 hover:shadow-10"
            />
            <label
              class="text-neutral-shade-100 text-base ml-2"
              id="headlessui-label-20"
            >
              Yes
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SpottersSafetyObserver should display the SpottersSafetyObserver section with prefilled values 1`] = `
<DocumentFragment>
  <div
    class="mb-4"
  >
    <div
      class="mb-4 text-neutral-shade-100"
    >
      <h5
        class="font-semibold"
      >
        Spotters/Safety Observer
      </h5>
    </div>
    <div
      class="flex flex-col mb-4 gap-4 bg-brand-gray-10 p-4"
    >
      <div>
        <label
          class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        >
          Has a Safety Observer been assigned?
        </label>
        <div
          class="flex flex-wrap flex-row gap-6"
          id="headlessui-radiogroup-21"
          role="radiogroup"
        >
          <div
            aria-checked="true"
            aria-labelledby="headlessui-label-23"
            class="flex items-center"
            id="headlessui-radiogroup-option-22"
            role="radio"
            tabindex="0"
          >
            <div
              class="flex items-center justify-center border rounded-xl w-5 h-5 border-neutral-shade-38 cursor-pointer hover:border-neutral-shade-58 hover:shadow-10"
            >
              <div
                class="w-2.5 h-2.5 rounded-xl bg-brand-urbint-40 shadow-5"
              />
            </div>
            <label
              class="text-neutral-shade-100 text-base ml-2"
              id="headlessui-label-23"
            >
              No
            </label>
          </div>
          <div
            aria-checked="false"
            aria-labelledby="headlessui-label-25"
            class="flex items-center"
            id="headlessui-radiogroup-option-24"
            role="radio"
            tabindex="-1"
          >
            <div
              class="flex items-center justify-center border rounded-xl w-5 h-5 border-neutral-shade-38 cursor-pointer hover:border-neutral-shade-58 hover:shadow-10"
            />
            <label
              class="text-neutral-shade-100 text-base ml-2"
              id="headlessui-label-25"
            >
              Yes
            </label>
          </div>
        </div>
      </div>
      <div>
        <label
          class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        >
          Notes
        </label>
        <textarea
          aria-label="FieldTextArea"
          class="w-full max-h-36 text-base text-neutral-shade-100 outline-none focus:border-brand-gray-60 disabled:cursor-not-allowed min-h-12 border border-neutral-shade-37 rounded resize-y py-1 px-2"
          name="safetyAndCompliance.spottersSafetyObserver.safetyObserverAssignedNotes"
          style="height: 0px;"
        >
          Not yet
        </textarea>
      </div>
    </div>
    <div
      class="flex flex-col mb-4 gap-4"
    >
      <div>
        <label
          class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        >
          Spotter Identified when machinery and/or equipment is backing up?
        </label>
        <div
          class="flex flex-wrap flex-row gap-6"
          id="headlessui-radiogroup-26"
          role="radiogroup"
        >
          <div
            aria-checked="false"
            aria-labelledby="headlessui-label-28"
            class="flex items-center"
            id="headlessui-radiogroup-option-27"
            role="radio"
            tabindex="-1"
          >
            <div
              class="flex items-center justify-center border rounded-xl w-5 h-5 border-neutral-shade-38 cursor-pointer hover:border-neutral-shade-58 hover:shadow-10"
            />
            <label
              class="text-neutral-shade-100 text-base ml-2"
              id="headlessui-label-28"
            >
              No
            </label>
          </div>
          <div
            aria-checked="true"
            aria-labelledby="headlessui-label-30"
            class="flex items-center"
            id="headlessui-radiogroup-option-29"
            role="radio"
            tabindex="0"
          >
            <div
              class="flex items-center justify-center border rounded-xl w-5 h-5 border-neutral-shade-38 cursor-pointer hover:border-neutral-shade-58 hover:shadow-10"
            >
              <div
                class="w-2.5 h-2.5 rounded-xl bg-brand-urbint-40 shadow-5"
              />
            </div>
            <label
              class="text-neutral-shade-100 text-base ml-2"
              id="headlessui-label-30"
            >
              Yes
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SpottersSafetyObserver should display the SpottersSafetyObserver section without defaults 1`] = `
<DocumentFragment>
  <div
    class="mb-4"
  >
    <div
      class="mb-4 text-neutral-shade-100"
    >
      <h5
        class="font-semibold"
      >
        Spotters/Safety Observer
      </h5>
    </div>
    <div
      class="flex flex-col mb-4 gap-4 bg-brand-gray-10 p-4"
    >
      <div>
        <label
          class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        >
          Has a Safety Observer been assigned?
        </label>
        <div
          class="flex flex-wrap flex-row gap-6"
          id="headlessui-radiogroup-5"
          role="radiogroup"
        >
          <div
            aria-checked="false"
            aria-labelledby="headlessui-label-1"
            class="flex items-center"
            id="headlessui-radiogroup-option-2"
            role="radio"
            tabindex="0"
          >
            <div
              class="flex items-center justify-center border rounded-xl w-5 h-5 border-neutral-shade-38 cursor-pointer hover:border-neutral-shade-58 hover:shadow-10"
            />
            <label
              class="text-neutral-shade-100 text-base ml-2"
              id="headlessui-label-1"
            >
              No
            </label>
          </div>
          <div
            aria-checked="false"
            aria-labelledby="headlessui-label-3"
            class="flex items-center"
            id="headlessui-radiogroup-option-4"
            role="radio"
            tabindex="-1"
          >
            <div
              class="flex items-center justify-center border rounded-xl w-5 h-5 border-neutral-shade-38 cursor-pointer hover:border-neutral-shade-58 hover:shadow-10"
            />
            <label
              class="text-neutral-shade-100 text-base ml-2"
              id="headlessui-label-3"
            >
              Yes
            </label>
          </div>
        </div>
      </div>
      <div>
        <label
          class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        >
          Notes
        </label>
        <textarea
          aria-label="FieldTextArea"
          class="w-full max-h-36 text-base text-neutral-shade-100 outline-none focus:border-brand-gray-60 disabled:cursor-not-allowed min-h-12 border border-neutral-shade-37 rounded resize-y py-1 px-2"
          name="safetyAndCompliance.spottersSafetyObserver.safetyObserverAssignedNotes"
        />
      </div>
    </div>
    <div
      class="flex flex-col mb-4 gap-4"
    >
      <div>
        <label
          class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        >
          Spotter Identified when machinery and/or equipment is backing up?
        </label>
        <div
          class="flex flex-wrap flex-row gap-6"
          id="headlessui-radiogroup-10"
          role="radiogroup"
        >
          <div
            aria-checked="false"
            aria-labelledby="headlessui-label-6"
            class="flex items-center"
            id="headlessui-radiogroup-option-7"
            role="radio"
            tabindex="0"
          >
            <div
              class="flex items-center justify-center border rounded-xl w-5 h-5 border-neutral-shade-38 cursor-pointer hover:border-neutral-shade-58 hover:shadow-10"
            />
            <label
              class="text-neutral-shade-100 text-base ml-2"
              id="headlessui-label-6"
            >
              No
            </label>
          </div>
          <div
            aria-checked="false"
            aria-labelledby="headlessui-label-8"
            class="flex items-center"
            id="headlessui-radiogroup-option-9"
            role="radio"
            tabindex="-1"
          >
            <div
              class="flex items-center justify-center border rounded-xl w-5 h-5 border-neutral-shade-38 cursor-pointer hover:border-neutral-shade-58 hover:shadow-10"
            />
            <label
              class="text-neutral-shade-100 text-base ml-2"
              id="headlessui-label-8"
            >
              Yes
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
